--- a/Mod_Conta/Css/conta.css
+++ b/Mod_Conta/Css/conta.css
@@ -152,9 +152,7 @@ th {
 
 #Caja2Admin {
 	width: 98%;
-	margin-right: auto;
-	margin-left: auto;
-	color: #FFFFFF;
+	margin: -2.2em auto 0.4em auto;	color: #FFFFFF;
 	text-align: left;
 	/* border: 1px solid #93D7BF; */
 }
@@ -359,3 +357,18 @@ a:hover  img {
 .tablac{
 	margin:auto 0.4em auto 0.4em; 
 }
+
+
+.resultadosi{
+	color: #01c493 !important;
+	font-weight: bolder;
+}
+.resultadosg{
+	color: #f1bd2d !important;
+	font-weight: bolder;
+}
+.resultadosd{
+	color: #cc5fe7 !important;
+	font-weight: bolder;
+}
+
