--- a/Mod_Conta/Inclu_Index/GrafIndex.css
+++ b/Mod_Conta/Inclu_Index/GrafIndex.css
@@ -133,12 +133,14 @@
       bottom: 0; 
       left: 0; 
       height: 0; 
+      max-height: 100.0%;/**/
       width: 100%; 
       /*background: #2D7BB2; */
       text-indent: -9999px; 
       overflow: hidden; 
     }
     .bgcolori{
+      
       background: #01c493 !important;
     }
     .bgcolorg{
