--- a/Mod_Conta/Css/conta.css
+++ b/Mod_Conta/Css/conta.css
@@ -375,15 +375,24 @@ a:hover  img {
 	font-weight: bolder;
 }
 
+.DeleteBlack{
+	background-image: url(../cbj_Images/delete_black.png);
+}
+.DeleteGrey{
+	background-image: url(../cbj_Images/delete_grey.png);
+}
+.DeleteWhite{
+	background-image: url(../cbj_Images/delete_white.png);
+}
+.DeleteBlack:hover, .DeleteGrey:hover, .DeleteWhite:hover{
+	background-image: url(../cbj_Images/delete_black.png);
+}
 .imgDelete{
 	width: 2.1em !important;
 	height: 2.1em !important;
 	margin: 0.1em;
-	background-image: url(../cbj_Images/delete_white.png);
+	/*background-image: url(../cbj_Images/delete_white.png);*/
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: contain;
-}
-.imgDelete:hover{
-	background-image: url(../cbj_Images/delete_black.png);
 }
