--- a/Mod_Conta/Css/conta.css
+++ b/Mod_Conta/Css/conta.css
@@ -40,7 +40,7 @@ a:visited:hover {
 	margin-bottom: 12px;
 	margin-left: 12px;
 	margin-right: 12px;
-	border: medium double #CCC;
+	/* border: medium double #CCC; */
 	padding-top: 8px;
 	padding-bottom: 8px;
 	color: #CCC;
@@ -70,6 +70,16 @@ table {
 	margin: 0.8em auto 0.8em auto;
 	border-radius: 12px;
 }
+.bgctd{
+	background-color: #444;
+}
+.bgctdb{
+	background-color: none;
+}
+.bgctd:hover, .bgctdb:hover{
+	background-color: #242424;
+}
+
 .tableForm img{
 	border-radius: 8px;
 }
@@ -215,7 +225,7 @@ th {
 	font-style: normal;
 	text-align: center;
 	color: #CCC;
-	border: medium double #CCC;
+	/* border: medium double #CCC; */
 	padding-top: 4px;
 	padding-right: 0px;
 	padding-bottom: 4px;
@@ -357,7 +367,7 @@ a:hover  img {
 
 .divTablaIndex{
 	margin:0.4em auto 0.4em auto; 
-	border: 1px solid green !important; 
+	/*border: 1px solid green !important; */
 	text-align:center; 
 	width:99.9% !important;
 	
